test/libsolidity/syntaxTests/imports/name_clash_in_import_struct_contract_1.sol
==== Source: a ====
struct A { uint256 a; }
==== Source: b ====
import "a";
contract A {}
// ----
// DeclarationError: (b:12-25): Identifier already declared.
